--- a/package.json
+++ b/package.json
@@ -11,18 +11,18 @@
   "dependencies": {
     "@mdi/font": "5.9.55",
     "roboto-fontface": "*",
-    "vue": "^3.2.20",
-    "vue-router": "^4.0.10",
-    "vuetify": "^3.0.0-alpha.12",
+    "vue": "^3.2.45",
+    "vue-router": "^4.1.6",
+    "vuetify": "^3.0.3",
     "webfontloader": "^1.0.0"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "5.0.0-beta.7",
-    "@vue/cli-service": "5.0.0-beta.7",
+    "@vue/cli-plugin-babel": "^5.0.0",
+    "@vue/cli-service": "^5.0.0",
     "sass": "^1.38.0",
     "sass-loader": "^10.0.0",
     "vue-cli-plugin-vuetify": "~2.4.5",
-    "vuetify-loader": "^2.0.0-alpha.0"
+    "webpack-plugin-vuetify": "^2.0.0"
   },
   "browserslist": [
     "> 1%",
