fix: meta/vdsg-metadata-tests

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "../../repo/vdsg-slave",
     "../../repo/vdsg-common",
     "../../repo/vdsg-server-common",
+    "../../meta/vdsg-metadata-tests",
     "../../meta/vdsg-metadata-configs",
     "../../meta/vdsg-metadata-vuetify"
   ],
